--- a/index.html
+++ b/index.html
@@ -769,7 +769,11 @@
                 </div>
                 <div class="input-group">
                     <label for="register-password">Mật khẩu</label>
-                    <input type="password" id="register-password" required>
+                    <input type="password" id="register-password" required minlength="6">
+                </div>
+                <div class="input-group">
+                    <label for="register-confirm-password">Nhập lại mật khẩu</label>
+                    <input type="password" id="register-confirm-password" required minlength="6">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Đăng ký</button>
             </form>
